// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarkerTooltipContents renders tooltips for various markers 1`] = `
<div
  className="tooltipMarker propClass"
>
  <div
    className="tooltipHeader"
  >
    <div
      className="tooltipOneLine"
    >
      <div
        className="tooltipTiming"
      >
        0.000
        ms
      </div>
      <div
        className="tooltipTitle"
      >
        Bailout
      </div>
    </div>
    <div
      className="tooltipDetails"
    >
      <div
        className="tooltipLabel"
      >
        Thread:
      </div>
      Main Thread
    </div>
  </div>
  <div
    className="tooltipDetails"
  >
    <div
      className="tooltipLabel"
    >
      Type
      :
    </div>
    ShapeGuard
    <div
      className="tooltipLabel"
    >
      Where
      :
    </div>
    after getelem
    <div
      className="tooltipLabel"
    >
      Script
      :
    </div>
    resource://foo.js -&gt; resource://bar.js
    <div
      className="tooltipLabel"
    >
      Function Line
      :
    </div>
    3662
    <div
      className="tooltipLabel"
    >
      Bailout Line
      :
    </div>
    3666
    <div
      className="tooltipLabel"
    >
      Description:
    </div>
    <div
      style={
        Object {
          "maxWidth": "300px",
        }
      }
    >
      A shape guard based on TI information failed. (We saw an object whose shape does not match that / any of those observed by the baseline IC.)
    </div>
  </div>
</div>
`;

exports[`MarkerTooltipContents renders tooltips for various markers 2`] = `
<div
  className="tooltipMarker propClass"
>
  <div
    className="tooltipHeader"
  >
    <div
      className="tooltipOneLine"
    >
      <div
        className="tooltipTiming"
      >
        0.000
        ms
      </div>
      <div
        className="tooltipTitle"
      >
        Invalidate
      </div>
    </div>
    <div
      className="tooltipDetails"
    >
      <div
        className="tooltipLabel"
      >
        Thread:
      </div>
      Main Thread
    </div>
  </div>
  <div
    className="tooltipDetails"
  >
    <div
      className="tooltipLabel"
    >
      URL
      :
    </div>
    http://mozilla.com/script.js
    <div
      className="tooltipLabel"
    >
      Line
      :
    </div>
    1234
  </div>
</div>
`;

exports[`MarkerTooltipContents renders tooltips for various markers 3`] = `
<div
  className="tooltipMarker propClass"
>
  <div
    className="tooltipHeader"
  >
    <div
      className="tooltipOneLine"
    >
      <div
        className="tooltipTiming"
      >
        0.80
        ms
      </div>
      <div
        className="tooltipTitle"
      >
        DOMEvent
      </div>
    </div>
    <div
      className="tooltipDetails"
    >
      <div
        className="tooltipLabel"
      >
        Thread:
      </div>
      Main Thread
    </div>
  </div>
  <div
    className="tooltipDetails"
  >
    <div
      className="tooltipLabel"
    >
      Type
      :
    </div>
    commandupdate
  </div>
</div>
`;

exports[`MarkerTooltipContents renders tooltips for various markers 4`] = `
<div
  className="tooltipMarker propClass"
>
  <div
    className="tooltipHeader"
  >
    <div
      className="tooltipOneLine"
    >
      <div
        className="tooltipTiming"
      >
        0.000
        ms
      </div>
      <div
        className="tooltipTitle"
      >
        UserTiming
      </div>
    </div>
    <div
      className="tooltipDetails"
    >
      <div
        className="tooltipLabel"
      >
        Thread:
      </div>
      Main Thread
    </div>
  </div>
  <div
    className="tooltipDetails"
  >
    <div
      className="tooltipLabel"
    >
      Name
      :
    </div>
    foobar
  </div>
</div>
`;

exports[`MarkerTooltipContents renders tooltips for various markers 5`] = `
<div
  className="tooltipMarker propClass"
>
  <div
    className="tooltipHeader"
  >
    <div
      className="tooltipOneLine"
    >
      <div
        className="tooltipTiming"
      >
        0.000
        ms
      </div>
      <div
        className="tooltipTitle"
      >
        GCMinor
      </div>
    </div>
    <div
      className="tooltipDetails"
    >
      <div
        className="tooltipLabel"
      >
        Thread:
      </div>
      Main Thread
    </div>
  </div>
  <div
    className="tooltipDetails"
  >
    <div
      className="tooltipLabel"
    >
      Reason
      :
    </div>
    CC_WAITING
    <div
      className="tooltipLabel"
    >
      Bytes tenured
      :
    </div>
    4.0MB / 8.0MB (50%)
    <div
      className="tooltipLabel"
    >
      New nursery size
      :
    </div>
    16MB
    <div
      className="tooltipLabel"
    >
      Lazy-allocated size
      :
    </div>
    12MB
  </div>
</div>
`;

exports[`MarkerTooltipContents renders tooltips for various markers 6`] = `
<div
  className="tooltipMarker propClass"
>
  <div
    className="tooltipHeader"
  >
    <div
      className="tooltipOneLine"
    >
      <div
        className="tooltipTiming"
      >
        0.000
        ms
      </div>
      <div
        className="tooltipTitle"
      >
        GCMajor
      </div>
    </div>
    <div
      className="tooltipDetails"
    >
      <div
        className="tooltipLabel"
      >
        Thread:
      </div>
      Main Thread
    </div>
  </div>
  <div
    className="tooltipDetails"
  >
    <div
      className="tooltipLabel"
    >
      Reason
      :
    </div>
    CC_WAITING
    <div
      className="tooltipLabel"
    >
      Non-incremental reason
      :
    </div>
    Non incremental reason
    <div
      className="tooltipLabel"
    >
      Total slice times
      :
    </div>
    157.215ms
    <div
      className="tooltipLabel"
    >
      Max Pause
      :
    </div>
    103.65ms
    <div
      className="tooltipLabel"
    >
      Heap usage
      :
    </div>
    16MB
    <div
      className="tooltipLabel"
    >
      MMU 20ms
      :
    </div>
    0.000%
    <div
      className="tooltipLabel"
    >
      MMU 50ms
      :
    </div>
    0.000%
    <div
      className="tooltipLabel"
    >
      Minor GCs
      :
    </div>
    9
    <div
      className="tooltipLabel"
    >
      Slices
      :
    </div>
    13
    <div
      className="tooltipLabel"
    >
      Zones
      :
    </div>
    3 / 5 (60%)
    <div
      className="tooltipLabel"
    >
      Compartments
      :
    </div>
    79
  </div>
</div>
`;

exports[`MarkerTooltipContents renders tooltips for various markers 7`] = `
<div
  className="tooltipMarker propClass"
>
  <div
    className="tooltipHeader"
  >
    <div
      className="tooltipOneLine"
    >
      <div
        className="tooltipTiming"
      >
        0.000
        ms
      </div>
      <div
        className="tooltipTitle"
      >
        GCSlice
      </div>
    </div>
    <div
      className="tooltipDetails"
    >
      <div
        className="tooltipLabel"
      >
        Thread:
      </div>
      Main Thread
    </div>
  </div>
  <div
    className="tooltipDetails"
  >
    <div
      className="tooltipLabel"
    >
      Reason
      :
    </div>
    CC_WAITING
    <div
      className="tooltipLabel"
    >
      Budget
      :
    </div>
    11
    <div
      className="tooltipLabel"
    >
      States
      :
    </div>
    Initial – Final
    <div
      className="tooltipLabel"
    >
      Page faults
      :
    </div>
    0
  </div>
</div>
`;
